--- a/index.html
+++ b/index.html
@@ -3,36 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Horizon des Visionnaires</title>
+    <title>IFA - Connecter. Partager.</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
-            color: #333;
             margin: 0;
-            padding: 20px;
+            padding: 0;
+            background-color: #f3f4f6;
         }
-        header {
-            background-color: #4CAF50;
+        .header {
+            background-color: #4a90e2;
             color: white;
-            padding: 10px 0;
+            padding: 20px;
             text-align: center;
         }
-        main {
-            margin-top: 20px;
+        .header h1 {
+            margin: 0;
         }
-        a {
-            color: #4CAF50;
+        .slogan {
+            font-size: 1.2em;
+            margin: 0;
+        }
+        .nav {
+            display: flex;
+            justify-content: center;
+            background-color: #2c3e50;
+            padding: 10px;
+        }
+        .nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .main {
+            display: flex;
+            justify-content: space-around;
+            padding: 20px;
+        }
+        .signup, .images, .intro {
+            flex: 1;
+            margin: 10px;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .signup form {
+            display: flex;
+            flex-direction: column;
+        }
+        .signup form input {
+            margin: 10px 0;
+            padding: 10px;
+            font-size: 1em;
+        }
+        .images img {
+            max-width: 100%;
+            height: auto;
+            margin: 10px 0;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Horizon des Visionnaires</h1>
-    </header>
-    <main>
-        <p></p>
-        <p>Pour plus d'informations, visitez <a href="https://www.w3schools.com/" target="_blank">W3Schools</a>.</p>
-    </main>
+
+    <div class="header">
+        <h1>IFA</h1>
+        <p class="slogan">Connecter. Partager.</p>
+    </div>
+
+    <div class="nav">
+        <a href="#home">Accueil</a>
+        <a href="#features">Fonctionnalités</a>
+        <a href="#contact">Contact</a>
+        <a href="#about">À propos</a>
+    </div>
+
+    <!-- Inscription à définir -->
+
+    <div class="main">
+        <div class="signup">
+            <h2>Inscription</h2>
+            <form>
+                <input type="text" placeholder="Nom d'utilisateur" required>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Mot de passe" required>
+                <input type="submit" value="S'inscrire">
+            </form>
+        </div>
+
+        <div class="images">
+            <h2>Communauté</h2>
+            <img src="community1.jpg" alt="Communauté 1">
+            <img src="community2.jpg" alt="Communauté 2">
+            <img src="community3.jpg" alt="Communauté 3">
+        </div>
+
+        <div class="intro">
+            <h2>Bienvenue sur IFA</h2>
+            <p>IFA est un réseau social dédié à connecter les personnes du monde entier et à fournir de l'aide pour la finance</p>
+        </div>
+    </div>
+
 </body>
 </html>
